--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.inputform label{
+    margin: 10px 0;
+
+}
+.btnbox{
+    margin-top: 25px;
+}
+.left{
+    margin-right: 10px;
+}
+.float-right{
+    text-align: right;
+}
+.heading{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 8px 0px 15px 0px;
+    color: #0d6efd;
+    text-transform: uppercase;
+}
+input.ng-invalid.ng-touched {
+    border: 1px solid red;
+  }
+  
+  .inputform span{
+    font-size: 12px;
+    color: red;
+    font-weight: 600;
+  }
+ 
